<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141A31"
    tools:context=".ui.fragments.HomeFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/carrocontrol"
                    android:textColor="@color/AzulClaro"
                    android:textSize="60sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gesti_n_de_tus_autom_viles"
                android:textAlignment="center"
                android:textColor="@color/turqueza"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCorreoNoVerificado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/correo_no_verificado"
                android:textColor="@color/design_default_color_error"
                android:textSize="25sp"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReenviarVerificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="#440877"
                app:cornerRadius="16dp"
                android:textSize="15sp"
                android:text="@string/reenviar_correo_de_verificaci_n"
                android:textAllCaps="false"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bienvenido"
                android:layout_marginTop="15dp"
                android:textColor="@color/AzulClaro"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/turqueza"
                android:textSize="18sp"
                tools:text="Correo usuario" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnListaAutomoviles"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="200dp"
                android:text="@string/lista_de_autom_viles"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:backgroundTint="@color/AzulClaro"
                android:textColor="@color/azulOscuro"
                app:cornerRadius="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCerrarSesion"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="32dp"
                app:cornerRadius="16dp"
                android:backgroundTint="@color/red"
                android:text="@string/cerrar_sesi_n"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="10dp"
                android:background="#707070" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/buttom"
                android:textAlignment="center"
                android:textColor="@color/turqueza"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
